--- a/index.html
+++ b/index.html
@@ -124,23 +124,27 @@
         <table>
             <thead>
                 <tr>
-                    <th>ID</th>
+                    <th class="radius-rigth-up">ID</th>
                     <th>Nome</th>
-                    <th>Email</th>
+                    <th class="radius-left-up">Email</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
+                    <td class="radius-rigth">1</td>
                     <td>João</td>
-                    <td>joao@email.com</td>
+                  <td class="radius-left">joao@email.com <div class="degrade">-</div> <div class="degrade2">-</div></td>
                 </tr>
                 <tr>
-                    <td>2</td>
+                    <td class="radius-rigth">2</td>
                     <td>Maria</td>
-                    <td>maria@email.com</td>
+                    <td class="radius-left">maria@email.com <div class="degrade">-</div> <div class="degrade2">-</div></td>
                 </tr>
                 <tr>
-                    <td>3</td>
+                    <td class="radius-rigth">3</td>
                     <td>Pedro</td>
-                    <td>pedro@email.com<
+                    <td class="radius-left">pedro@email.com <div class="degrade">-</div> <div class="degrade2">-</div></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
